src/objects/Program__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Engagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alliance_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PSA-CLD-USNONE -  Alliance Manager</description>
        <label>Alliance Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.pse__Is_Resource__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Programs (Alliance Manager)</relationshipLabel>
        <relationshipName>Alliance_Managers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>PSA-CLD-USNONE - End Date</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <description>PSA-CLD-USNONE - The id of this record in its source system.  Used for data migration.</description>
        <externalId>true</externalId>
        <inlineHelpText>The id of this record in its source system.  Used for data migration.</inlineHelpText>
        <label>Legacy ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Program_Alliance_Manager_Current_User__c</fullName>
        <description>PSA-CLD-USNONE - If Program Manager or Alliance Manager is equal to current user, return true or else return false</description>
        <formula>IF( OR(Program_Manager__r.pse__Salesforce_User__c  = $User.Id, Alliance_Manager__r.pse__Salesforce_User__c = $User.Id) , &apos;True&apos;, &apos;False&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If Program Manager or Alliance Manager is equal to current user, return true or else return false</inlineHelpText>
        <label>Program||Alliance Manager = Current User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PSA-CLD-USNONE - Program Manager</description>
        <label>Program Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.pse__Is_Resource__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requires_Target_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PSA-CLD-USNONE - If checked, changes to service targets will only be processed when the Service Target Change Request is approved.</description>
        <inlineHelpText>If checked, changes to service targets will only be processed when the Service Target Change Request is approved.</inlineHelpText>
        <label>Requires Target Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>PSA-CLD-USNONE - Start Date</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Program</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Alliance_Manager__c</columns>
        <columns>Program_Manager__c</columns>
        <columns>Requires_Target_Approval__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>PGM_LV01_PSA_CLD_My_Programs_Program_Manager</fullName>
        <columns>NAME</columns>
        <columns>Alliance_Manager__c</columns>
        <columns>Account__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Alliance_Manager_Current_User__c</field>
            <operation>equals</operation>
            <value>true</value>
        </filters>
        <label>My Programs (Program Manager)</label>
    </listViews>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>